# eargs

./: CMakeLists.txt  README.md
includes/eargs/: parser.hpp
tests/: CMakeLists.txt
tests/source/: hex.cpp  integer.cpp  string.cpp
